# sfml-app-framework

./: CMakeLists.txt
src/: main.cpp
src/Core/: Application.cpp  Application.hpp
